--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         color: rgb(209, 209, 209); 
         background-color: dimgray; 
         border:2px; 
-        border-color:rgb(189, 188, 188) ;  "
+        border-color:rgb(189, 188, 188) ; 
       }
       img {
         width:50%;
